# CodeLab

./: CMakeLists.txt  Problem.h  README.md  main.cpp
C++/: CMakeLists.txt  Problem.h  README.md
C++/arrays/: ArrayHeaders.h  ArrayProblem.cpp  ArrayProblem.h  BiggestDiagonalSum.cpp  BiggestDiagonalSum.h  CMakeLists.txt  NQueens.cpp  NQueens.h  OneDimensionArrayProblem.cpp  OneDimensionArrayProblem.h  TwoDimensionArrayProblem.cpp  TwoDimensionArrayProblem.h  VillagesDistances.cpp  VillagesDistances.h
C++/arrays/nbulecture/1D/: ArrayShift.cpp  ArrayShift.h  ContainerWithMostWater.cpp  ContainerWithMostWater.h  TwoSum.cpp  TwoSum.h
C++/arrays/nbulecture/2D/: FlippingAnImage.cpp  FlippingAnImage.h  MatrixMultiplication.cpp  MatrixMultiplication.h  MaxHourGlass.cpp  MaxHourGlass.h  TransposeMatrix.cpp  TransposeMatrix.h
C++/arrays/nbulecture/homework/: OneTwoBitCharacter.cpp  OneTwoBitCharacter.h  SpiralMatrix.cpp  SpiralMatrix.h  ToeplitzMatrix.cpp  ToeplitzMatrix.h
C++/arrays/nbulecture/homework/skeleton/: OneTwoBitCharacterSkeleton.cpp  SpiralMatrixSkeleton.cpp  ToeplitzMatrixSkeleton.cpp
C++/arrays/search/: BinarySearch.cpp  BinarySearch.h
C++/arrays/sorting/: ArraySorter.cpp  ArraySorter.h  BubbleSort.cpp  BubbleSort.h  ParitySort.cpp  ParitySort.h
C++/asapcppadvanced/: CMakeLists.txt  README.md
C++/dummy_test/: CMakeLists.txt  main.cpp
C++/engine/: CMakeLists.txt  main.cpp
C++/studies/: CMakeLists.txt  StudiesProblem.cpp  StudiesProblem.h
C++/studies/algorithms/: MinK.cpp  MinK.h  MinProduct.cpp  MinProduct.h  PhoneBills.cpp  PhoneBills.h  RGBSorting.cpp  RGBSorting.h  ShoeSizes.cpp  ShoeSizes.h  StrangeSort.cpp  StrangeSort.h  UnionAddition.cpp  UnionAddition.h
C++/studies/mkk_algorithms/: EntryTest.cpp  EntryTest.h  FileStreams.cpp  FileStreams.h  entry_test_problems.txt
C++/studies/mkk_algorithms/final_exam/: CoveredArea.cpp  CoveredArea.h  FindPath.cpp  FindPath.h  RPGGame.cpp  RPGGame.h  TransformTreeNode.cpp  TransformTreeNode.h  TreeExample.cpp
C++/studies/mkk_algorithms/homework1/: DecodeStringBonus.cpp  DecodeStringBonus.h  FunctionIntegrator.cpp  FunctionIntegrator.h  IntegratingFunction.cpp  IntegratingFunction.h  LargeFloat.cpp  LargeFloat.h  LargeFloatProblem.cpp  LargeFloatProblem.h  Range.hpp
C++/studies/mkk_algorithms/homework2/: Algo1-03.pptx  AllSumsOfANumber.cpp  AllSumsOfANumber.h  AllSumsOfANumberRestricted.cpp  AllSumsOfANumberRestricted.h
C++/studies/mkk_algorithms/homework3/: GeneticFlappyBird.cpp  GeneticFlappyBird.h  ThreadPool.cpp  ThreadPool.h  flappy.h
C++/tools/datagenerator/: CMakeLists.txt  main.cpp
C++/tools/datageneratorlib/: CMakeLists.txt  DataGenerator.cpp  DataGenerator.h
Java/: .gitignore
Java/src/: AddDigits.java  Combinations.java  Divide.java  FruitIntoBaskets.java  GameOfLife.java  GroupAnagrams.java  IntToRoman.java  JewelsAndStones.java  LetterCombinationsPhone.java  LongestIncreasingSubsequence.java  LongestPalindromeSubstring.java  LongestSubstringNonRepeat.java  MathPow.java  MergeInterval.java  MergeSort.java  MinASCIIDeleteSum.java  NumPositionsInSortedArr.java  SetZeroesMatrix.java  SimplifyPath.java  StringToInt.java  SudokuValidation.java  SumOf3.java  UniqueEmails.java  ZigZagConversion.java
Java/src/collections/arraylist/: Sortings.java
Java/src/test/: NthFromEndLinkedList.java  Test.java
arrays/: ArrayHeaders.h  ArrayProblem.h  CMakeLists.txt  ContainerWithMostWater.cpp  ContainerWithMostWater.h  NQueens.cpp  NQueens.h  OneDimensionArrayProblem.cpp  OneDimensionArrayProblem.h  SumOfSubarrayMinimums.cpp  SumOfSubarrayMinimums.h  TwoDimensionArrayProblem.cpp  TwoDimensionArrayProblem.h  VillagesDistances.cpp
arrays/nbulecture/: ContainerWithMostWater.cpp  ContainerWithMostWater.h  TwoSum.cpp  TwoSum.h
arrays/nbulecture/1D/: ArrayShift.cpp  ArrayShift.h  TwoSum.cpp
arrays/nbulecture/2D/: FlippingAnImage.h  MatrixMultiplication.cpp  MatrixMultiplication.h  MaxHourGlass.h  TransposeMatrix.cpp
arrays/nbulecture/homework/: OneTwoBitCharacter.h  SpiralMatrix.cpp  ToeplitzMatrix.h
arrays/nbulecture/homework/skeleton/: OneTwoBitCharacterSkeleton.cpp  SpiralMatrixSkeleton.cpp  ToeplitzMatrixSkeleton.cpp
arrays/search/: BinarySearch.cpp  BinarySearch.h
arrays/sorting/: ArraySorter.cpp  ArraySorter.h  BubbleSort.cpp
datagenerator/: CMakeLists.txt  DataGenerator.cpp  DataGenerator.h  main.cpp
dummy_test/: CMakeLists.txt  main.cpp
engine/: CMakeLists.txt  main.cpp
studies/: CMakeLists.txt  StudiesProblem.h
studies/algorithms/: MinK.cpp  MinK.h  MinProduct.cpp  MinProduct.h  PhoneBills.cpp  PhoneBills.h  RGBSorting.cpp  RGBSorting.h  ShoeSizes.cpp  ShoeSizes.h  StrangeSort.cpp  StrangeSort.h  UnionAddition.cpp  UnionAddition.h
studies/mkk_algorithms/: entry_test_problems.txt
studies/mkk_algorithms/homework1/: DecodeStringBonus.h  FunctionIntegrator.cpp  FunctionIntegrator.h  IntegratingFunction.cpp  IntegratingFunction.h  LargeFloat.cpp  LargeFloat.h  LargeFloatProblem.cpp  LargeFloatProblem.h  maina.cpp
studies/mkk_algorithms/homework2/: AllSumsOfANumber.cpp  AllSumsOfANumber.h  AllSumsOfANumberRestricted.cpp  AllSumsOfANumberRestricted.h
studies/mkk_algorithms/homework3/: Flappy.h  GeneticFlappyBird.cpp  GeneticFlappyBird.h  ThreadPool.cpp  ThreadPool.h
tools/datagenerator/: CMakeLists.txt  DataGenerator.cpp  main.cpp
tools/datageneratorlib/: CMakeLists.txt  DataGenerator.cpp  DataGenerator.h
